--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
     <section class="news">
       <h2 class="news__title sprite spriteNews">
         <span class="news__koTitle">새소식</span>
-        <span class="news__enTitle accentNews">WebCafe News</span></h2>
+        <span class="news__enTitle accentNews">WebCafe News</span>
+      </h2>
       <figure class="news__videoContainer">
         <video class="news__video" poster="./assets/media/poster.jpg" controls>
           <source src="./assets/media/stories.mp4" type="video/mp4" />
