반응형 웹 예제 완성

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       </h2>
       <ol class="favorite__list">
         <li class="favorite__item">
-          <a class="favorite__link" href="http://ko.learnlayout.com/" target="_blank" data-tooltip="레이아웃을 배우자" rel="noopener noreferrer">
+          <a class="favorite__link" href="http://ko.learnlayout.com/" target="_blank" ata-tooltip="레이아웃을 배우자" rel="noopener noreferrer">
             <span class="fas fa-external-link-alt accentFavorite" aria-hidden="true"></span> Learn CSS Layout
           </a>
         </li>
